Deleting Missing Libraries Crashes Blender #99462

Closed
opened 2022-07-05 15:41:45 +02:00 by Julio Cargnin Pereira · 10 comments

System Information
Operating system: Linux-5.17.5-76051705-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (newest version of Blender that worked as expected)

Short description of error
In the Outliner > Blend file display mode: if there is a report of a missing library and you try to: right click it > delete > Blender will crash.

Exact steps for others to reproduce the error

  • Open default scene
  • Link armature from DifferentArmatures_JumpKeyframesBug.blend
  • Save your current .blend
  • close the saved .blend file
  • Delete the DifferentArmatures_JumpKeyframesBug.blend
  • Reopen saved .blend file
  • In outliner, change display mode to Blender file
  • right click on missing library > delete

DifferentArmatures_JumpKeyframesBug.blend

Test file (first 6 steps included):
#99462-1.blend

2022-07-05_22-39.png

**System Information** Operating system: Linux-5.17.5-76051705-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (newest version of Blender that worked as expected) **Short description of error** In the Outliner > Blend file display mode: if there is a report of a missing library and you try to: right click it > delete > Blender will crash. **Exact steps for others to reproduce the error** - Open default scene - Link armature from `DifferentArmatures_JumpKeyframesBug.blend` - Save your current .blend - close the saved .blend file - Delete the `DifferentArmatures_JumpKeyframesBug.blend` - Reopen saved .blend file - In outliner, change display mode to `Blender file` - right click on missing library > delete [DifferentArmatures_JumpKeyframesBug.blend](https://archive.blender.org/developer/F13262019/DifferentArmatures_JumpKeyframesBug.blend) Test file (first 6 steps included): [#99462-1.blend](https://archive.blender.org/developer/F13262056/T99462-1.blend) ![2022-07-05_22-39.png](https://archive.blender.org/developer/F13261021/2022-07-05_22-39.png)

Added subscriber: @CosmoMidias

Added subscriber: @CosmoMidias
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I can't replicate the crash on 3.2 or master. Can you attach the crash report? https://docs.blender.org/manual/en/latest/troubleshooting/crash.html
Can you perhaps attach a file that causes this issue?

I can't replicate the crash on 3.2 or master. Can you attach the crash report? https://docs.blender.org/manual/en/latest/troubleshooting/crash.html Can you perhaps attach a file that causes this issue?
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Can confirm the crash. I've sample .blend file and reproducing steps (Will edit the report)

Stack trace:
blender.exe         :0x00007FF61AAACE90  id_delete C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_edit.cc:460
blender.exe         :0x00007FF61AAB6550  blender::FunctionRef<void __cdecl(TreeElement *)>::callback_fn<<lambda_46deda4517d7cf64a5c38c24d07a C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95
blender.exe         :0x00007FF61AAB63F0  blender::ed::outliner::tree_iterator::all C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\tree\tree_iterator.cc:19
blender.exe         :0x00007FF61AAB9FE0  outliner_lib_operation_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_tools.cc:2526
blender.exe         :0x00007FF619EEF150  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1392
blender.exe         :0x00007FF619EEE800  wm_operator_call_internal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1597
blender.exe         :0x00007FF619EF17D0  WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1836
blender.exe         :0x00007FF61A235640  ui_apply_but_funcs_after C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:1018
blender.exe         :0x00007FF61A245370  ui_popup_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:11579
blender.exe         :0x00007FF619EEDC70  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3164
blender.exe         :0x00007FF619EED0A0  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3286
blender.exe         :0x00007FF619EF3350  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3878
blender.exe         :0x00007FF619ED9A90  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626
blender.exe         :0x00007FF619ED5210  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:552
blender.exe         :0x00007FF61B0AA634  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFF925C7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFF93702630  RtlUserThreadStart```
Can confirm the crash. I've sample .blend file and reproducing steps (Will edit the report) ```lines=10 Stack trace: blender.exe :0x00007FF61AAACE90 id_delete C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_edit.cc:460 blender.exe :0x00007FF61AAB6550 blender::FunctionRef<void __cdecl(TreeElement *)>::callback_fn<<lambda_46deda4517d7cf64a5c38c24d07a C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95 blender.exe :0x00007FF61AAB63F0 blender::ed::outliner::tree_iterator::all C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\tree\tree_iterator.cc:19 blender.exe :0x00007FF61AAB9FE0 outliner_lib_operation_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_outliner\outliner_tools.cc:2526 blender.exe :0x00007FF619EEF150 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1392 blender.exe :0x00007FF619EEE800 wm_operator_call_internal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1597 blender.exe :0x00007FF619EF17D0 WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1836 blender.exe :0x00007FF61A235640 ui_apply_but_funcs_after C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:1018 blender.exe :0x00007FF61A245370 ui_popup_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:11579 blender.exe :0x00007FF619EEDC70 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3164 blender.exe :0x00007FF619EED0A0 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3286 blender.exe :0x00007FF619EF3350 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3878 blender.exe :0x00007FF619ED9A90 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626 blender.exe :0x00007FF619ED5210 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:552 blender.exe :0x00007FF61B0AA634 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFF925C7020 BaseThreadInitThunk ntdll.dll :0x00007FFF93702630 RtlUserThreadStart```

Thanks @PratikPB2123 for confirming it and preparing the sample files.

Thanks @PratikPB2123 for confirming it and preparing the sample files.

This issue was referenced by 4b0e7fe511

This issue was referenced by 4b0e7fe511b14aecad105d83115592f43d27dbc0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-07-06 11:35:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99462
No description provided.